test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/inline_attr.sw
library;

struct S { }

impl S {
    #[inline(always = false)]
    fn not_ok() { }
}